[tool.poetry]
name = "cc.chroni.ansible"
version = "0.1.0"
description = "Ansible configuration for setting up my infrastructure."
authors = ["Thomas Steinert <hello@chroni.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
ansible-core = "^2"
docker = "^6"
python = ">=3.10"
pywinrm = ">=0.3.0"

[tool.poetry.dev-dependencies]
ansible-lint = { version = "^6", markers = "platform_system != 'Windows'" }
molecule = "^6"
molecule-docker = "^2"
pre-commit = "^2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
